Fix fonts on iOS

--- a/css/voynich.css
+++ b/css/voynich.css
@@ -8,7 +8,10 @@ body {
 	-ms-user-select: none;
 	user-select: none;
 
-	font-family: Tahoma;
+	font-family: -apple-system, BlinkMacSystemFont,
+    “Segoe UI”, “Roboto”, “Oxygen”,
+    “Ubuntu”, “Cantarell”, “Fira Sans”,
+    “Droid Sans”, “Helvetica Neue”, sans-serif;
 }
 
 #game {
